--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+:root {
+     --light-blue: #89A2FF;
+}
+
 * {
      margin: 0;
      padding: 0;
@@ -8,7 +12,8 @@
 }
 
 body {
-     background: #5E8B7E;
+     /* background: #5E8B7E; */
+     background-image: linear-gradient(to top, #007f3b, #007f3b, #007f3b, #007f3b, #007f3b);
 }
 
 .heading {
@@ -18,12 +23,12 @@ body {
 }
 
 .heading h1 {
-     color: #FFA17A;
+     color: var(--light-blue);
      font-size: 2.5rem;
 }
 
 .heading p {
-     width: 50%;
+     width: 40%;
      margin: 2px auto;
      font-style: italic;
 }
@@ -51,7 +56,7 @@ body {
 }
 
 label {
-     color: #FFA17A;
+     color: var(--light-blue);
      font-size: 20px;
      font-weight: 400;
 }
@@ -62,7 +67,7 @@ input {
      border-radius: 5px;
      text-align: center;
      border: none;
-     border-bottom: 2px solid #FFA17A;
+     border-bottom: 2px solid var(--light-blue);
      outline: none;
      margin-top: 8px;
      padding: 0 10px;
@@ -76,15 +81,11 @@ input {
      justify-content: center;
      padding: 3rem;
      color: #fff;
-     font-size: 15px;
 }
 
-.footer span {
-     font-size: 15px;
-}
 
-.footer p span:nth-child(2){
-     color: #FFA17A;
+.footer p span:nth-child(2) {
+     color: var(--light-blue);
 }
 
 /* media queries  */
@@ -94,7 +95,7 @@ input {
      }
 
      .heading p {
-          width: 100%;
+          width: 60%;
           padding: 0 2rem;
      }
 }
@@ -102,6 +103,11 @@ input {
 @media (max-width: 450px) {
      .heading h1 {
           font-size: 1.7rem;
+     }
+
+     .heading p {
+          width: 100%;
+          padding: 1rem;
      }
 
      label {
@@ -112,7 +118,8 @@ input {
           padding: 1rem;
      }
 
-     .footer p, .footer p span{
+     .footer p,
+     .footer p span {
           font-size: 14px;
      }
 }
